[[bin]]
name = "app"
path = "./src/app/main.rs"

[[bin]]
name = "scrapper"
path = "./src/scrapper/main.rs"

[package]
name = "who-is-who"
version = "0.1.0"
edition = "2021"
default-run = "scrapper"

[dependencies]
axum-macros = "0.4"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.0", features = ["full"] }
maud = "0.27.0"
serde = { version = "1.0.219", features = ["derive"] }
scraper = "0.23.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
encoding_rs = "0.8.35"
